--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,7 +8,7 @@
           </a>
         </ion-col>
         <ion-col size="2" class="ion-align-self-center ion-text-center cursor-pointer" routerLink="shopping-cart">
-          <ion-grid class="ion-no-padding" *ngIf="authService.isAuthenticated()">
+          <ion-grid class="ion-no-padding" *ngIf="authService.isAuthenticated()" routerLink="/shopping-cart">
             <ion-row>
               <ion-col size="12">
                 <ion-icon name="cart-outline"></ion-icon>
