--- a/src/app/feature/calendar/components/appointment-request/appointment-request.component.html
+++ b/src/app/feature/calendar/components/appointment-request/appointment-request.component.html
@@ -12,7 +12,8 @@
                 formControlName="appointmentDate"
                 placeholder="Selecciona una fecha"
                 display-format="DDD D MMM"
-                min="{{ getMinDate() }}"></ion-datetime>
+                min="{{ getMinDate() }}">
+              </ion-datetime>
             </ion-col>
           </ion-row>
           <ion-row>
@@ -22,7 +23,8 @@
                 placeholder="Selecciona una hora"
                 display-format="h:mm A"
                 picker-format="h:mm A"
-                minute-values="0,15,30,45"></ion-datetime>
+                minute-values="0,15,30,45">
+              </ion-datetime>
             </ion-col>
           </ion-row>
           <ion-row>
