--- a/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
@@ -24,6 +24,7 @@
             <ion-row class="ion-align-items-center">
               <ion-col size="2">
                 <ion-input
+                  class="ion-text-center"
                   value="{{ item.quantity }}"
                   type="number"
                   inputmode="numeric"
