--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -129,6 +129,15 @@
               </ion-select>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-input
+                placeholder="Correo Electr&oacute;nico"
+                formControlName="email"
+                type="email">
+              </ion-input>
+            </ion-col>
+          </ion-row>
         </ion-grid>
       </form>
       <ion-button
