--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <ion-app>
+
   <app-header></app-header>
+  <app-side-menu></app-side-menu>
   <app-main-menu></app-main-menu>
-  <ion-router-outlet></ion-router-outlet>
+  
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
