template copy of other app

--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -9,11 +9,11 @@
             </a>       
       </ion-col>
       <ion-col size="4" class="ion-text-center">        
-        <a routerLink="/weddings">Bodas</a>
+        <a style="font-family: Montserrat,sans-serif;" routerLink="/weddings">Bodas</a>
       </ion-col>
-      <ion-col size="4" class="ion-text-center">
+      <!-- <ion-col size="4" class="ion-text-center">
         <a routerLink="/service-categories">Servicios</a>
-      </ion-col>
+      </ion-col> -->
     </ion-row>
   </ion-grid>
 
