--- a/src/app/core/components/side-menu/side-menu.component.html
+++ b/src/app/core/components/side-menu/side-menu.component.html
@@ -9,7 +9,7 @@
     <ion-list>
       <ion-item *ngIf="!isAuth" routerLink="/user"><ion-icon name="person-circle-outline"></ion-icon> Mi Perfil</ion-item>
       <ion-item *ngIf="isAuth" routerLink="/login"><ion-icon name="log-in-outline"></ion-icon> Iniciar sesion</ion-item>
-      <ion-item>Menu Item</ion-item>
+      <ion-item  ><ion-icon name="people"></ion-icon> Beautiers </ion-item>
       <ion-item>Menu Item</ion-item>
       <ion-item>Menu Item</ion-item>
     </ion-list>
