--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,35 @@
 @import '../../theme/view-container.scss';
 
 :host {
-  @extend .view-container;
+  margin-top: 89px;
+ // @extend .view-container;
 .title {
-  background-color: #e4c683; text-align: center; padding:5px; margin-top: 5px;
+  background-color: #e4c683; text-align: center; margin-top: 5px;
 } 
+.categori {
+  cursor: pointer;
+  transition: all ease 1s;
 }
+.panel {
+  margin-top:  1px;
+}
+.panelTitle {
+  font-family: Playfair Display;
+  font-size: 60px;
+  font-weight: 400;
+  font-style: italic; 
+  letter-spacing: 0.03em;
+  text-transform: initial;
+  text-align: center;
+  color: #fff;
+  position: absolute;
+  transform: translate(7%, 27%);
+  text-shadow: 5px 2px 4px #574c4c;
+}
+h2 {
+  font-family: Playfair Display;
+}
+
+
+}
+
