--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
        <ion-icon class="wedding" ></ion-icon> 
      
     </ion-tab-button>
-    <ion-tab-button tab="games">
+    <ion-tab-button tab="games" routerLink="/shopping-cart">
       <ion-label>Carrito</ion-label>
       <ion-icon name="cart"></ion-icon>
     </ion-tab-button>
