--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -155,7 +155,8 @@
       <ion-button
         expand="block"
         (click)="submitPayment()"
-        [disabled]="!(ccForm.touched && ccForm.valid)">Emitir Pago</ion-button>
+       >Emitir Pago</ion-button>
+       <!-- [disabled]="!(ccForm.touched && ccForm.valid)" -->
     </ion-card-content>
   </ion-card>
 </ion-content>
