--- a/src/app/feature/weddings/form/form.component.html
+++ b/src/app/feature/weddings/form/form.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Datos del de la Boda</ion-title>
-    <ion-subtitle></ion-subtitle>
+    <!-- <ion-subtitle></ion-subtitle> -->
     <ion-buttons slot="end">
       <ion-icon (click)="closeModal()" name="close-circle"></ion-icon>
     </ion-buttons>
