--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,9 +14,9 @@
               <img src="./assets/images/web/inicio-3.jpeg">
             </ion-avatar>
             <ion-label>
-              <h2>Maquillaje Social Noche o Dia</h2>
-              <h3>MX $950</h3>
-              <p>Tan Natural o dramatico como lo dese...</p>
+              <h1>Maquillaje Social Noche o Dia</h1>
+              <h1>MX $950</h1>
+              <!-- <p>Tan Natural o dramatico como lo dese...</p> -->
               
             </ion-label>
           </ion-item>         
