--- a/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.scss
@@ -4,6 +4,9 @@
   @extend .view-container;
 }
 
+ion-toolbar {
+  display: none;
+}
 ion-label {
   max-width: 100% !important;
 }
@@ -12,4 +15,8 @@ ion-input {
   text-align: right;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+agm-map {
+  height: 150px;
 }
