--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,8 +15,8 @@
               </ion-avatar>
               <ion-label>
                 <h2>{{servicio.name}}</h2>
-                <h3> $ {{servicio.public_price}}</h3>
-                <p>{{servicio.description}}</p>
+                <h1> $ {{servicio.public_price}}</h1>
+                <!-- <p>{{servicio.description}}</p> -->
                 
               </ion-label>
             </ion-item>         
