--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -77,23 +77,23 @@
               </span>
             </ion-col>
           </ion-row>
-          <ion-row>
+          <!-- <ion-row>
             <ion-col size="12">
               <ion-input
                 placeholder="Domicilio (calle y no., interior, etc.)"
                 formControlName="street1">
               </ion-input>
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+          <!-- <ion-row>
             <ion-col size="12">
               <ion-input
                 placeholder="Domicilio (colonia, fracc., etc.)"
                 formControlName="street2">
               </ion-input>
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+          <!-- <ion-row>
             <ion-col size="6">
               <ion-input
                 placeholder="Ciudad"
@@ -110,8 +110,8 @@
                   value="{{ item.name }}">{{ item.name }}</ion-select-option>
               </ion-select>
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+          <!-- <ion-row>
             <ion-col size="6">
               <ion-input
                 placeholder="C&oacute;digo Postal"
@@ -128,8 +128,8 @@
                   value="{{ item.code }}">{{ item.name }}</ion-select-option>
               </ion-select>
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+          <!-- <ion-row>
             <ion-col size="12">
               <ion-input
                 placeholder="Correo Electr&oacute;nico"
@@ -137,8 +137,8 @@
                 type="email">
               </ion-input>
             </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+          <!-- <ion-row>
             <ion-col size="12">
               <ion-intl-tel-input
                 inputPlaceholder="Tel&eacute;fono"
@@ -149,14 +149,15 @@
                 formControlName="phone"
               ></ion-intl-tel-input>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
         </ion-grid>
       </form>
+      <!-- [disabled]="!(ccForm.touched && ccForm.valid)"  -->
       <ion-button
+      
         expand="block"
         (click)="submitPayment()"
-       >Emitir Pago</ion-button>
-       <!-- [disabled]="!(ccForm.touched && ccForm.valid)" -->
+       >Emitir Pago</ion-button>       
     </ion-card-content>
   </ion-card>
 </ion-content>
