--- a/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,5 @@
 
 <ion-content>
-
   <ion-list>
     <ion-list-header>
       <span>Mi Carrito</span>
@@ -65,6 +64,7 @@
           <ion-row>
             <ion-col size="12">
               <input
+              placeholder="Direccion del Serivico"
                 style="width: 100%;"
                 ngx-google-places-autocomplete
                 [options]="placesOptions"
@@ -92,9 +92,8 @@
                 auto-grow="true"
                 placeholder="Introduce aqu&iacute; el n&uacute;mero de interior o apartamento si aplica as&iacute; como cualquier indicaci&oacute;n especial para tu orden."></ion-textarea>
             </ion-col>
-          </ion-row>
-        
-          <ion-row *ngIf="shoppingCart?.workOrder.place_id">
+          </ion-row>        
+          <ion-row *ngIf="shoppingCart?.workOrder.place_id" >
             <ion-col size="12">
               <ion-button expand="block" routerLink="payment">Pagar</ion-button>
             </ion-col>
