--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -21,11 +21,11 @@ ion-icon {
 }
 
 
-@media (pointer:none), (pointer:coarse) {
-  ion-toolbar {
-    display: none;
-  }
-  :host {
-    height:0px;
-  }
-}
+// @media (pointer:none), (pointer:coarse) {
+//   ion-toolbar {
+//     display: none;
+//   }
+//   :host {
+//     height:0px;
+//   }
+// }
