--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,7 +7,7 @@
     text-align: center;
     margin-top: 5px;
   }
-  .categori {
+  .category {
     cursor: pointer;
     transition: all ease 1s;
   }
