--- a/src/app/home/components/data-delete/data-delete.component.html
+++ b/src/app/home/components/data-delete/data-delete.component.html
@@ -144,12 +144,14 @@
         <ion-col>
           <h4>Adjuntos (comprobantes de indentidad). S&oacute;lo JPG o PDF.</h4>
         </ion-col>
+      <ion-row>
         <ion-col>
           <ion-input
             placeholder="Adjuntos"
             type="file"
             required="true"></ion-input>
         </ion-col>
+      </ion-row>
       </ion-row>
       <ion-row>
         <ion-col>
