remove movil class

--- a/src/app/home/components/privacy/privacy.component.html
+++ b/src/app/home/components/privacy/privacy.component.html
@@ -1,4 +1,4 @@
-<ion-content class="movil">
+<ion-content>
   <h1>POLÍTICA DE PRIVACIDAD</h1>
   <p>
     El presente Política de Privacidad establece los términos en que Beauty Now
