--- a/src/app/core/components/modals/item-desc/item-desc.component.html
+++ b/src/app/core/components/modals/item-desc/item-desc.component.html
@@ -54,7 +54,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <h2>Descripcion</h2>
+        <h2>Descripci&oacute;n</h2>
         <p>{{ service.description }}</p>
       </ion-col>
     </ion-row>
@@ -89,7 +89,7 @@
       <ion-item>
         <ion-textarea
           formControlName="notes"
-          placeholder="Tienes algun comentario?"
+          placeholder="&iquest;Tienes alg&uacute;n comentario?"
         ></ion-textarea>
       </ion-item>
     </form>
