--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -16,7 +16,7 @@
             </ion-row>
             <ion-row>
               <ion-col size="12">
-                <ion-badge color="dark">{{ getShoppingCartLineItemCount() }}</ion-badge>
+                <ion-badge color="primary" style="position: absolute;top: -42px;right: 4px;">{{ getShoppingCartLineItemCount() }}</ion-badge>
               </ion-col>
             </ion-row>
           </ion-grid>
