--- a/src/app/core/components/modals/item-desc/item-desc.component.scss
+++ b/src/app/core/components/modals/item-desc/item-desc.component.scss
@@ -10,12 +10,12 @@
 
 
 ion-datetime {
-     border: solid 1px #eb445a;
+     border: solid 1px #e4c683;
  }
 
 
 .actionsPerson {
-    color:#eb445a;
+    color:#e4c683;
     cursor: pointer;
     text-align: center;
     transition: all ease 0.2s;
