--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -8,13 +8,13 @@
       <ion-grid>
         <ion-row class="ion-align-items-center">
           <ion-col size="4">
-            <img src="../../../../../assets/images/shopping-cart/visa.jpeg" />
+            <img src="../../../../../assets/images/shopping-cart/visa.svg" />
           </ion-col>
           <ion-col size="4">
-            <img src="../../../../../assets/images/shopping-cart/mc.png" />
+            <img src="../../../../../assets/images/shopping-cart/mc.svg" />
           </ion-col>
           <ion-col size="4">
-            <img src="../../../../../assets/images/shopping-cart/amex.png" />
+            <img src="../../../../../assets/images/shopping-cart/ae.svg" />
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -129,7 +129,7 @@
               </ion-select>
             </ion-col>
           </ion-row> -->
-          <!-- <ion-row>
+          <ion-row>
             <ion-col size="12">
               <ion-input
                 placeholder="Correo Electr&oacute;nico"
@@ -137,7 +137,7 @@
                 type="email">
               </ion-input>
             </ion-col>
-          </ion-row> -->
+          </ion-row>
           <!-- <ion-row>
             <ion-col size="12">
               <ion-intl-tel-input
@@ -153,8 +153,7 @@
         </ion-grid>
       </form>
       <!-- [disabled]="!(ccForm.touched && ccForm.valid)"  -->
-      <ion-button
-      
+      <ion-button      
         expand="block"
         (click)="submitPayment()"
        >Emitir Pago</ion-button>       
