--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
-<ion-content class="movil" [fullscreen]="true">
+<ion-content  [fullscreen]="true">
+
   <!-- maquillaje -->
     <div class="panel" *ngFor="let category of serviceCategories"> <!-- agregar ng for para los servicios *ngFor="let servicio of services; index as i;"-->
       <div class="category" (click)="category.panel=!category.panel">
