--- a/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature/shopping-cart/components/shopping-cart/shopping-cart.component.html
@@ -61,7 +61,8 @@
       </ion-item>
       <ion-item>
         <ion-grid>
-          <ion-row>
+
+          <!-- <ion-row>
             <ion-col size="12">
               <input
               placeholder="Direccion del Serivico"
@@ -70,32 +71,158 @@
                 [options]="placesOptions"
                 (onAddressChange)="handleAddressChange($event)" />
             </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="12">
-              <span>{{ serviceAddress?.formatted_address}}</span>
-            </ion-col>
-          </ion-row>
-          <ion-row>
+          </ion-row> -->
+        
+
+
+
+          <div class="direction-content">
+            
+              <ion-button expand="full" (click)="addressGoogleMapPanel=!addressGoogleMapPanel">Direccion con Google Maps </ion-button>             
+             <section [ngStyle]="{display: !addressGoogleMapPanel ? 'none': 'block'}">
+              <ion-row >
+                <ion-col size="12">
+                  <input
+                  placeholder="Direccion del Serivico"
+                    style="width: 100%;"
+                    ngx-google-places-autocomplete
+                    [options]="placesOptions"
+                    (onAddressChange)="handleAddressChange($event)" />
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <span>{{ serviceAddress?.formatted_address}}</span>
+                </ion-col>
+              </ion-row>
+              <ion-row>            
+                <ion-col size="12">
+                  <ion-textarea
+                    class="w-full"
+                    rows="5"
+                    auto-grow="true"
+                    placeholder="Introduce aqu&iacute; el n&uacute;mero de interior o apartamento si aplica as&iacute; como cualquier indicaci&oacute;n especial para tu orden."></ion-textarea>
+                </ion-col>
+              </ion-row>   
+            </section>
+            
+            <!-- //// -->
+            <div>
+              <ion-button expand="full" (click)="addressPanel=!addressPanel">Direccion Manual </ion-button>
+            
+              <ion-row>
+                 <form [formGroup]="addressForm">
+                <ion-col size="12" [ngStyle]="{display: !addressPanel ? 'none': 'block'}">
+                 
+                  <ion-row  class="ion-align-items-start">
+                    <ion-col size="12" >                 
+                        <ion-item >
+                          <ion-label >Colonia</ion-label>
+                          <ion-input  formControlName="colonia"></ion-input>
+                          <!-- <span
+                          class="error ion-padding"
+                          *ngIf="!addressForm.controls.colonia.untouched"
+                          [innerHTML]="inputValidators.required.errorMessage"></span> -->
+                        </ion-item>          
+                      
+                    </ion-col>
+                    <ion-col size="12" >
+                      
+                      <ion-item>
+                        <ion-label>Calle </ion-label>
+                        <ion-input  formControlName="calle"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.calle.untouched"
+                        [innerHTML]="inputValidators.required.errorMessage"></span> -->
+                      </ion-item>
+                    </ion-col>    
+                  </ion-row>
+            
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label >No. Interior</ion-label>
+                        <ion-input type="number" formControlName="noInt"></ion-input>
+                      </ion-item>   
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label >No. Exterior</ion-label>
+                        <ion-input  type="number" formControlName="noExt"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.noExt.untouched"
+                        [innerHTML]="inputValidators.required.errorMessage"></span> -->
+                      </ion-item>   
+                    </ion-col>
+                  </ion-row>
+            
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label>C.P.</ion-label>
+                        <ion-input type="number"  formControlName="cp"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.noExt.untouched"
+                        [innerHTML]="inputValidators.cp.errorMessage"></span> -->
+                      </ion-item>   
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label >Pais</ion-label>
+                        <ion-input  formControlName="pais"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.noExt.untouched"
+                        [innerHTML]="inputValidators.pais.errorMessage"></span> -->
+                      </ion-item>   
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label>Estado</ion-label>
+                        <ion-input  formControlName="estado"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.noExt.untouched"
+                        [innerHTML]="inputValidators.estado.errorMessage"></span> -->
+                      </ion-item>   
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item >
+                        <ion-label >Ciudad</ion-label>
+                        <ion-input  formControlName="ciudad"></ion-input>
+                        <!-- <span
+                        class="error ion-padding"
+                        *ngIf="!addressForm.controls.ciudad.untouched"
+                        [innerHTML]="inputValidators.estado.errorMessage"></span> -->
+                      </ion-item>   
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </form>
+              </ion-row>
+            
+            
+            
+            </div>
+            </div>
+          <!-- <ion-row>
             <ion-col size="12">
               <agm-map [zoom]="zoom" [latitude]="lat" [longitude]="lng">
                 <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
               </agm-map>
             </ion-col>
-          </ion-row>
-          <ion-row>
-            
+          </ion-row> -->
+
+
+      
+          <ion-row  *ngIf="pagar"> <!--*ngIf="shoppingCart?.workOrder.place_id" [disabled]="!addressForm.valid"-->
             <ion-col size="12">
-              <ion-textarea
-                class="w-full"
-                rows="5"
-                auto-grow="true"
-                placeholder="Introduce aqu&iacute; el n&uacute;mero de interior o apartamento si aplica as&iacute; como cualquier indicaci&oacute;n especial para tu orden."></ion-textarea>
-            </ion-col>
-          </ion-row>        
-          <ion-row *ngIf="shoppingCart?.workOrder.place_id" >
-            <ion-col size="12">
-              <ion-button expand="block" routerLink="payment">Pagar</ion-button>
+              <ion-button  expand="block" color="primary" color="primary" routerLink="payment"> Pagar  </ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
