--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -2,7 +2,10 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <ion-button (click)="panelLoginFlag = !panelLoginFlag" color="primary" expand="full" fill="outline">
+          <ion-icon slot="start"  name="log-in-outline"></ion-icon> Continuar con Beautynow </ion-button>
+
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" [ngStyle]="{display: !panelLoginFlag ? 'none': 'block'}">
           <ion-grid>
             <ion-row>
               <ion-col size="12">
@@ -11,21 +14,56 @@
             </ion-row>
             <ion-row>
               <ion-col size="12">
-                <ion-input placeholder="Contrase&ntilde;a" formControlName="password"></ion-input>
+                <ion-input placeholder="Contrase&ntilde;a" type="password" formControlName="password"></ion-input>
               </ion-col>
             </ion-row>
           </ion-grid>
+          <ion-button color="primary" type="submit" fill="outline">
+            <ion-icon name="storefront-outline"></ion-icon>   Iniciar sesión </ion-button>
+            <ion-button color="primary"  fill="outline" (click)="panelRegisterFlag =!panelRegisterFlag">
+              <ion-icon name="person-add-outline"></ion-icon>  Crear Cuenta </ion-button>
         </form>
+        <form [formGroup]="registerForm" (ngSubmit)="onRegisterSubmit()" [ngStyle]="{display: !panelRegisterFlag ? 'none': 'block'}">
+          <ion-grid> 
+            <ion-row>
+            <ion-col size="12">
+              <ion-input placeholder="Nombre" formControlName="name"></ion-input>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-input placeholder="Apellidos" formControlName="apellidos"></ion-input>
+            </ion-col>
+          </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-input placeholder="Correo electr&oacute;nico" formControlName="email"></ion-input>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-input placeholder="Contrase&ntilde;a" type="password" formControlName="password"></ion-input>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-input placeholder="Confirmar Contrase&ntilde;a" type="password" formControlName="confirmpassword"></ion-input>
+              </ion-col>
+            </ion-row>
+            
+          </ion-grid>
+          <ion-button color="primary" type="submit" fill="outline">
+            Crear</ion-button>
+          
+        </form>
+
       </ion-col>
     </ion-row>
+  
     <ion-row>
       <ion-col size="12">
-        <p>o</p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-button (click)="facebookLogin()">Continuar con Facebook</ion-button>
+        <ion-button (click)="facebookLogin()" color="secondary" expand="full" fill="outline">
+          <ion-icon slot="start"  name="logo-facebook"></ion-icon> Continuar con Facebook</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
