register form WIP

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,16 +16,15 @@
   }
   .panelTitle {
     font-family: Playfair Display;
-    font-size: 50px;
+    font-size: 42px;
     font-weight: 400;
     font-style: italic;
     letter-spacing: 0.03em;
     text-transform: initial;
-    // text-align: center;
     color: #fff;
     position: absolute;
-    // transform: translate(7%, 27%);
     text-shadow: 5px 2px 4px #574c4c;
+    padding: 10px;
   }
   h2 {
     font-family: Playfair Display;
